feat: implement credit notes feature with complete Factus integration and Jackson date serialization